# FiveM-Security-Scanner

./: CMakeLists.txt  LICENSE  README.md
src/: MainWindow.cpp  MainWindow.h  pattern_database.json
src/core/: ScannerEngine.h
